「オプション」→「ファイルとリンク」→「新規作成するリンクの形式」を「ファイルに対する相対パス」に設定
「オプション」→「ファイルとリンク」→「[[ウィキリンク]]を使用」を無効化

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,6 @@
 {
   "vimMode": true,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "newLinkFormat": "relative",
+  "useMarkdownLinks": true
 }
