--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 !/.obsidian/appearance.json
 !/.obsidian/core-plugins.json
 !/.obsidian/community-plugins.json
+!/.obsidian/plugins
+.obsidian/plugins/dataview/*
+.obsidian/plugins/obsidian-tasks-plugin/*
