--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .trash
-.obsidian/*
-!/.obsidian/app.json
-!/.obsidian/appearance.json
-!/.obsidian/core-plugins.json
-!/.obsidian/community-plugins.json
+.obsidian/graph.json
+.obsidian/workspace.json
 !/.obsidian/plugins
 .obsidian/plugins/dataview/*
 !/.obsidian/plugins/dataview/data.json
