「オプション」→「ファイルとリンク」→「新規添付ファイルの作成場所」を「現在のフォルダのサブフォルダ」に設定

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,6 @@
   "newLinkFormat": "relative",
   "useMarkdownLinks": true,
   "newFileLocation": "folder",
-  "newFileFolderPath": "98_未整理ノート"
+  "newFileFolderPath": "98_未整理ノート",
+  "attachmentFolderPath": "./attachments"
 }
