コミュニティプラグイン "Minimal Theme Settings" を追加

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ workspace.json
 plugins/dataview/*
 !/plugins/dataview/data.json
 plugins/obsidian-tasks-plugin/*
+plugins/obsidian-minimal-settings/*
+!plugins/obsidian-minimal-settings/data.json
 themes
